php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48307 stream_copy_to_stream() and sockets
Submitted: 2009-05-16 20:19 UTC Modified: 2009-05-16 20:24 UTC
From: lbarnaud@php.net Assigned: lbarnaud (profile)
Status: Closed Package: Streams related
PHP Version: 5 OS:
Private report: No CVE-ID: None
 [2009-05-16 20:19 UTC] lbarnaud@php.net
Description:
------------
stream_copy_to_stream() copies 0 bytes when $source is a socket

Reproduce code:
---------------
$sockets = stream_socket_pair(STREAM_PF_UNIX, STREAM_SOCK_STREAM, 0);

fwrite($sockets[0], b"a");
stream_socket_shutdown($sockets[0], STREAM_SHUT_WR);

var_dump(stream_copy_to_stream($sockets[1], STDOUT));

Expected result:
----------------
int(1)
a

Actual result:
--------------
int(0)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-05-16 20:24 UTC] lbarnaud@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC