MFH: Fixed bug #48307 (stream_copy_to_stream() copies 0 bytes when $source is a socket)